<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_70sdp"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hi"
        android:textSize="@dimen/_17ssp"
        android:textColor="@color/primary_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/from_italy_with"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_love"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/tv_pizza">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/pizza"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_sanpham"
                android:scaleType="centerInside"
                android:src="@drawable/pizzanav"
                android:layout_marginLeft="@dimen/_25sdp"
                 />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/pasta"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_sanpham"
                android:scaleType="centerInside"
                android:src="@drawable/friedchicken"
                android:layout_marginLeft="@dimen/_20sdp"
                 />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/icecream"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_sanpham"
                android:scaleType="centerInside"
                android:src="@drawable/cocktail"
                android:layout_marginLeft="@dimen/_20sdp"
                 />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/salad"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_sanpham"
                android:scaleType="centerInside"
                android:src="@drawable/salad"
                android:layout_marginLeft="@dimen/_20sdp"
                 />

            </LinearLayout>
            <TextView
                android:id="@+id/tv_hot_this_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/hot_this_month"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pizza" />

            <ViewFlipper
                android:id="@+id/viewflipper_hot_this_month"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_hot_this_month">


            </ViewFlipper>

            <TextView
                android:id="@+id/tv_promotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/promotion"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scroll_hot_this_month" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_promotion">

            </androidx.recyclerview.widget.RecyclerView>

            <ImageView
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carts"
                app:layout_constraintTop_toBottomOf="@+id/a"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carts"
                app:layout_constraintTop_toBottomOf="@+id/b"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carts"
                app:layout_constraintTop_toBottomOf="@+id/c"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carts"
                app:layout_constraintTop_toBottomOf="@+id/c"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carts"
                app:layout_constraintTop_toBottomOf="@+id/c"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carts"
                app:layout_constraintTop_toBottomOf="@+id/c"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>