<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_10sdp"
    android:scrollbars="none"
    android:background="@drawable/register"
    tools:context=".activities.SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>
<!--        <FrameLayout-->
<!--            android:id="@+id/layoutImage"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_10sdp">-->

<!--            <com.makeramen.roundedimageview.RoundedImageView-->
<!--                android:id="@+id/imageProfile"-->
<!--                android:layout_width="@dimen/_80sdp"-->
<!--                android:layout_height="@dimen/_80sdp"-->
<!--                android:background="@drawable/background_image"-->
<!--                android:scaleType="centerCrop"-->
<!--                app:riv_oval="true"/>-->

<!--            <TextView-->
<!--                android:id="@+id/textAddImage"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:text="@string/add_image"-->
<!--                android:textColor="@color/secondary_text"-->
<!--                android:textSize="@dimen/_10ssp"/>-->

<!--        </FrameLayout>-->

        <EditText
            android:id="@+id/edt_ho_ten"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Full name"
            android:imeOptions="actionNext"
            android:background="@drawable/background_input"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="5"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:hint="User name"
                android:imeOptions="actionNext"
                android:background="@drawable/background_input"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                />

            <EditText
                android:id="@+id/edt_ngay_sinh"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="5"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="Date of birth"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:background="@drawable/background_input"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_gioi_tinh"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="5"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:hint="Sex"
                android:imeOptions="actionDone"
                android:background="@drawable/background_input"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                />
            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="5"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="Phone number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:background="@drawable/background_input"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Email"
            android:imeOptions="actionDone"
            android:background="@drawable/background_input"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Password"
            android:imeOptions="actionDone"
            android:background="@drawable/background_input"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input"
            android:hint="Confirm password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:backgroundTint="@color/main_color"
                app:cornerRadius="@dimen/_8sdp"/>

<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar"-->
<!--                android:layout_width="@dimen/_25sdp"-->
<!--                android:layout_height="@dimen/_25sdp"-->
<!--                android:layout_gravity="center"-->
<!--                android:visibility="invisible"/>-->
        </FrameLayout>

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sing_in"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"/>



    </LinearLayout>

</ScrollView>